--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "node": "17.2.0"
   },
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "heroku-postbuild": "npm run build"
   },
   "author": "",
   "license": "ISC",
