--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "node src/app.js",
-    "nodemon": "node src/app.js -e js,hbs"
+    "nodemon": "nodemon src/app.js -e js,hbs"
   },
   "author": "",
   "license": "ISC",
