--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "node src/app.js",
-    "nodemon": "nodemon src/app.js -e js,hbs"
+    "dev": "nodemon src/app.js -e js,hbs"
   },
   "author": "",
   "license": "ISC",
@@ -17,5 +17,8 @@
     "express": "^4.16.4",
     "hbs": "^4.0.1",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.2.0"
   }
 }
